syntax = "proto3";


package books;

option go_package = "./books";

service StorageManagement {
  rpc CreateNewBook (NewBook) returns (Book) {}

  rpc CreateNewAuthor (NewAuthor) returns (Author) {}

  rpc GetAuthors (AuthorRequest) returns (AuthorList) {}

  rpc GetBooks (BooksRequest) returns (BooksList) {}
}

message NewBook {
  string bookName = 1;
  int64 authorId = 2;
}

message Book {
  int64 id = 1;
  string bookName = 2;
  int64 authorId = 3;
}

message NewAuthor {
  string name = 1;
  int64 bookId = 2;
}


message Author {
  int64 id = 1;
  string authorName = 2;
  int64 bookId = 3;
}


message BooksRequest {
  int64 authorId = 1;
}

message BooksList {
  repeated  BooksResponse books = 1;
}

message BooksResponse {
  int32 id = 1;
  string bookName = 2;
  int32 authorId = 3;
}

message AuthorRequest {
  int64 bookId = 1;
}

message AuthorResponse {
  int32 id = 1;
  string authorName = 2;
  int32 bookId = 3;
}

message AuthorList {
  repeated AuthorResponse authors = 1;
}

